# cpp_rtype

./: README.md  rfc.txt
client_rtype/: Makefile
client_rtype/game_engine/: Makefile
client_rtype/game_engine/include/: AAudio.hpp  AEntity.hpp  AMissile.hpp  IEntity.hpp  IMovement.hpp  IWindow.hpp  Laser.hpp  SpacecraftEntities.hpp  SpacecraftPlayer.hpp  World.hpp  missile.hpp  movement.hpp  music.hpp  particles.hpp  scroller.hpp  sound.hpp  spacecraft.hpp  time.hpp  window.hpp
client_rtype/game_engine/src/: laser.cpp  main.cpp  music.cpp  particles.cpp  scroller.cpp  sound.cpp  spacecraft.cpp  spacecraftEntities.cpp  spacecraftPlayer.cpp  time.cpp  window.cpp  world.cpp
client_rtype/include/: Action.hpp  EntityContainer.hpp  Game.hpp  MsgHandler.hpp  Select.hpp
client_rtype/src/: Action.cpp  EntityContainer.cpp  Game.cpp  MsgHandler.cpp  Select.cpp  main.cpp
common/network/: Packet.cpp  UnixSocket.cpp  WindowsSocket.cpp  main.cpp
common/tools/: AttackPacket.hpp  ConnectionPacket.hpp  CreationPacket.hpp  Data.hpp  DiePacket.hpp  KeyPacket.hpp  MovePacket.hpp  NewGamePacket.hpp  TestPacket.hpp
server_rtype/: CMakeLists.txt  compile.sh
server_rtype/client_test/: a.out  main.cpp  main.hpp
server_rtype/include/: Client.hpp  ClientManager.hpp  Entity.hpp  Game.hpp  PacketManager.hpp  Player.hpp  RingBuffer.hpp  Room.hpp  RoomException.hpp  RoomManager.hpp  Server.hpp
server_rtype/src/: Client.cpp  ClientManager.cpp  Game.cpp  PacketManager.cpp  Player.cpp  RingBuffer.cpp  Room.cpp  RoomManager.cpp  Server.cpp  main.cpp  main.cpp~
(+5 files in other folders)
